force-app/main/default/objects/ER_Store_Line_Item__c/ER_Store_Line_Item__c.object-meta.xml
<CustomObject>
    <label>Store Line Item</label>
    <nameField>
        <displayFormat>SLI-{0000000}</displayFormat>
        <label>Store Line Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Store line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>