force-app/main/default/objects/ER_Store_Line_Item__c/fields/ER_Solution__c.field-meta.xml
<CustomField>
    <fullName>ER_Solution__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Store line Items</relationshipLabel>
    <relationshipName>Store_line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>