force-app/main/default/objects/ER_Store_Line_Item__c/fields/ER_Status__c.field-meta.xml
<CustomField>
    <fullName>ER_Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accept</fullName>
            </value>
            <value>
                <fullName>Decline</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>