force-app/main/default/objects/ER_Store_Line_Item__c/fields/ER_Status_Picto__c.field-meta.xml
<CustomField>
    <fullName>ER_Status_Picto__c</fullName>
    <formula>CASE( ER_Status__c , 
&quot;Accept&quot;, IMAGE(&quot;/resource/SRER01_Images/Accept.png&quot;, &quot;Accept&quot;,22,22), 
&quot;Decline&quot;, IMAGE(&quot;/resource/SRER01_Images/Decline.png&quot;, &quot;Decline&quot;,22,22),
&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status</label>
    <type>Text</type>
</CustomField>