force-app/main/default/objects/ER_Store_Line_Item__c/fields/ER_Store__c.field-meta.xml
<CustomField>
    <fullName>ER_Store__c</fullName>
    <label>Store</label>
    <referenceTo>ER_Store__c</referenceTo>
    <relationshipLabel>Store line Items</relationshipLabel>
    <relationshipName>Store_line_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>